Set up routing and created template files.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,20 +5,11 @@
 ; Date: 10 August 2018
 ; Description: Portfolio website for- you guessed it! MATTHEWBRUBAKERSMITH!
 ;===========================================
-*/
 -->
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title><%= title %></title>
-</head>
-<body>
-
-
-
-</body>
-</html>
+<%- include('partials/header'); %>
+<% if(page == 'about' || page == 'portfolio' || page == 'contact') { %>
+    <%- include('pages/' + page) %>
+<% } else { %>
+    <%- include('pages/404') %>
+<% } %>
+<%- include('partials/footer'); %>
