--- a/views/pages/404.ejs
+++ b/views/pages/404.ejs
@@ -1,2 +1,5 @@
-<!-- Begin 404 Page -->
-404!
+<!-- BEGIN 404 PAGE -->
+<section id="error-page" class="page">
+    404!
+</section>
+<!-- END 404 PAGE -->
