--- a/views/pages/contact.ejs
+++ b/views/pages/contact.ejs
@@ -1,2 +1,5 @@
 <!-- BEGIN CONTACT PAGE -->
-Contakt!
+<section id="contact-page" class="page">
+    Contakt!
+</section>
+<!-- END CONTACT PAGE -->
