--- a/views/pages/portfolio.ejs
+++ b/views/pages/portfolio.ejs
@@ -1,2 +1,5 @@
 <!-- BEGIN PORTFOLIO PAGE -->
-Portfolioliolio
+<section id="portfolio-page" class="page">
+    Portfolioliolio
+</section>
+<!-- END PORTFOLIO PAGE -->
