--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,13 +1,12 @@
 <!-- BEGIN HEADER -->
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Matthew Brubaker Smith - Web Developer • Graphic Designer</title>
-</head>
-<body>
 <header id="header">
-    <img src="images/mbs-logo.svg" alt="Matthew Brubaker Smith's Logo'">
+    <div></div>
+    <hgroup>
+        <h1>MATTHEW BRUBAKER SMITH</h1>
+        <h2>WEB DEVELOPER • GRAPHIC DESIGNER</h2>
+        <% if(page == 'about' || page == 'portfolio' || page == 'contact') { %>
+            <h3><%- page %></h3>
+        <% } %>
+    </hgroup>
 </header>
+<!-- END HEADER -->
