--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,7 @@
 
 body {
     margin: 0px;
+    background-color: rgb(230,230,230);
 }
 
 #container {
@@ -38,12 +39,13 @@ body {
     font-family: 'Scope One', serif;
 }
 
-h1, h2, h3, h4, h5, h6, nav {
+h1, h2, h3, h4, h5, h6, #desktop-nav {
     font-family: 'Kanit', sans-serif;
 }
 
-.text-card-subtitle {
+.accent-text {
     font-family: 'Oswald', sans-serif;
+    font-weight: bold;
 }
 
 /* HEADER STYLES */
@@ -94,12 +96,17 @@ header div {
     width: 250px;
 }
 
-nav ul {
-    padding: 0px;
-    margin-top: 12px;
+#mobile-nav-button {
+    display: none;
 }
 
-nav ul li {
+#nav-list {
+    padding: 0px;
+    margin-top: 12px;
+    position: absolute;
+}
+
+#nav-list li {
     width: 126px;
     height: 30px;
 
@@ -113,7 +120,7 @@ nav ul li {
     -webkit-transform: skew(-10deg);
 }
 
-nav ul li a {
+#nav-list li a {
     display: block;
     width: 100%;
     height: 100%;
@@ -123,7 +130,7 @@ nav ul li a {
     color: rgb(255, 255, 51);
 }
 
-nav ul li div {
+#nav-list li div {
     width: 100%;
     height: 100%;
 
@@ -131,15 +138,15 @@ nav ul li div {
     -webkit-transform: skew(10deg);
 }
 
-nav ul li:first-of-type {
+#nav-list li:first-of-type {
     margin-left: 92px;
 }
 
-nav ul li:nth-of-type(2) {
+#nav-list li:nth-of-type(2) {
     margin-left: 82px;
 }
 
-nav ul li:last-of-type {
+#nav-list li:last-of-type {
     margin-left: 72px;
 }
 
@@ -151,17 +158,17 @@ nav ul li:last-of-type {
     margin-top: 20px;
 }
 
-.text-card-container {
+.skew-card-container {
     position: relative;
 }
 
-.text-card {
+.skew-card {
     background-color: rgb(29, 29, 29);
     transform: skew(-10deg);
     -webkit-transform: skew(-10deg);
 }
 
-.text-card-content {
+.skew-card-content {
     transform: skew(10deg);
     -webkit-transform: skew(10deg);
     width: 80%;
@@ -169,35 +176,98 @@ nav ul li:last-of-type {
     padding: 10px 0px 20px 0px;
 }
 
-.text-card-content h1 {
+.skew-card-content h1 {
     color: rgb(0, 153, 0);
 }
 
-.text-card-content p {
+.skew-card-content p {
     color: white;
 }
 
-.text-card-ribbon {
+.skew-card-ribbon {
     background-color: rgb(255, 255, 51);
     height: 33px;
     margin-left: -14%;
 }
 
-.text-card-subtitle {
+.skew-card-subtitle {
     margin-left: 12%;
     line-height: 33px;
 }
 
-.text-card-ribbon-back {
+.skew-card-ribbon-back {
     position: absolute;
     top: 118px;
     left: -.6%;
     z-index: -100;
     background-color: rgb(204, 204, 51);
     width: 33px;
-    height: 50px;
+    height: 80px;
     transform: skew(10deg);
     -webkit-transform: skew(10deg);
+}
+
+.portfolio-gallery {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.portfolio-piece {
+    max-width: 45%;
+    margin-bottom: 30px;
+
+    color: rgb(29, 29, 29);
+    text-decoration: none;
+}
+
+.portfolio-piece img {
+    width: 95%;
+    margin-top: 20px;
+    margin-left: 2.5%;
+}
+
+.portfolio-piece .skew-card-ribbon {
+    margin-top: 10px;
+}
+
+.piece-type-2 .skew-card {
+    transform: skew(10deg);
+    -webkit-transform: skew(10deg);
+}
+
+.piece-type-2 .skew-card-content {
+    transform: skew(-10deg);
+    -webkit-transform: skew(-10deg);
+}
+
+.piece-type-2 .skew-card-ribbon {
+    margin-left: 0px;
+    margin-right: -14%;
+}
+
+.piece-type-1 .skew-card-subtitle {
+    margin-left: 14%;
+}
+
+.piece-type-2 .skew-card-subtitle {
+    margin-left: 0px;
+    margin-right: 15%;
+    text-align: right;
+}
+
+.piece-type-1 .skew-card-ribbon-back {
+    top: 53px;
+    left: 3px;
+}
+
+.piece-type-2 .skew-card-ribbon-back {
+    transform: skew(-10deg);
+    -webkit-transform: skew(-10deg);
+    top: 53px;
+    left: auto;
+    right: 3px;
 }
 
 /* FOOTER STYLES */
@@ -229,6 +299,8 @@ footer {
 
 /* LOGO AND NAVIGATION MEDIA QUERIES */
 
+/* 900, 710, 530*/
+
 @media screen and (max-width: 900px) {
     #logo-nav-column {
         position: static;
@@ -239,25 +311,29 @@ footer {
         float: left;
     }
 
-    nav {
+    #desktop-nav {
         width: 30%;
         float: left;
     }
 
-    nav ul {
+    #nav-list {
         margin-top: 0px;
     }
 
-    nav ul li:first-of-type {
+    #nav-list li:first-of-type {
         margin-left: 2px;
     }
     
-    nav ul li:nth-of-type(2) {
+    #nav-list li:nth-of-type(2) {
         margin-left: -8px;
     }
     
-    nav ul li:last-of-type {
+    #nav-list li:last-of-type {
         margin-left: -18px;
+    }
+
+    header {
+        pointer-events: none;
     }
 
     header h1, header h2{
@@ -304,5 +380,184 @@ footer {
         transform: skew(-10deg);
         -webkit-transform: skew(-10deg);
     }
+
+    #header-main-column {
+        width: 90%;
+        margin: 0 auto !important;
+    }
+
+    .footer-content {
+        width: 72%;
+    }
+}
+
+@media screen and (max-width: 700px) {
+    #container {
+        padding-top: 1em;
+    }
+
+    .page {
+        margin-top: 1em;
+    }
+
+    #logo-nav-column {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        justify-content: space-between;
+    }
+
+    #logo {
+        height: unset;
+        float: unset;
+        margin-bottom: 1em;
+        transition: margin 600ms ease-out;
+        -webkit-transition: margin 600ms ease-out;
+    }
+
+    .show {
+        display: block !important;
+    }
+    
+    .navlist-show {
+        top: 0px !important;
+        left: 0px !important;
+    }
+
+    .logo-navlist-show {
+        margin-left: -20px;
+    }
+
+    #desktop-nav {
+        /* display: none;
+        position: absolute;
+        right: -6%;
+        bottom: 1%; */
+
+        padding-right: 10px;
+        padding-left: 60px;
+        margin-left: -50px;
+        overflow: hidden;
+    }
+
+    #nav-list {
+        position: relative;
+        top: -200px;
+        left: 40px;
+
+        transition: 
+            top 600ms ease-out, 
+            left 600ms ease-out;
+        -webkit-transition: 
+            top 600ms ease-out, 
+            left 600ms ease-out;
+    }
+
+    #mobile-nav-button {
+        display: block;
+        color: rgb(255, 255, 51);
+        text-shadow:
+            -2px -2px 0 rgb(29, 29, 29),
+            2px -2px 0 rgb(29, 29, 29),
+            -2px 2px 0 rgb(29, 29, 29),
+            2px 2px 0 rgb(29, 29, 29);
+        font-size: 3em;
+        line-height: 1em;
+        user-select: none;
+
+        float: right;
+        clear: both;
+        margin-left: -10px;
+
+        transform: skew(-10deg);
+        -webkit-transform: skew(-10deg);
+    }
+
+    #mobile-nav-button:hover {
+        cursor: pointer;
+    }
+
+    #header-main-column {
+        clear: both;
+    }
+
+    header {
+        height: auto;
+        text-align: center;
+    }
+
+    header h1 span {
+        display: inline;
+    }
+
+    header h1 span:first-of-type {
+        font-size: 100%;
+        line-height: normal;
+    }
+
+    header h1 span:last-of-type {
+        font-size: 100%;
+        line-height: normal;
+    }
+
+    header h2 {
+        margin-top: -15px;
+    }
+
+    header h2 span {
+        display: inline;
+    }
+
+    header h2 span:first-of-type {
+        font-size: 100%;
+        line-height: normal;
+    }
+
+    header h2 span:nth-of-type(2) {
+        display: inline;
+    }
+
+    header h2 span:last-of-type {
+        font-size: 100%;
+        line-height: normal;
+    }
+
+    header div {
+        position: absolute;
+        top: 5px;
+        left: auto;
+        right: auto;
+        width: 100%;
+        height: 45px;
+        z-index: -1;
+        background-color: rgb(255, 255, 51);
+        transform: skew(-10deg);
+        -webkit-transform: skew(-10deg);
+    }
+}
+
+@media screen and (max-width: 650px) {
+    #mobile-nav-button {
+        font-size: 2em;
+    }
+
+    .portfolio-piece {
+        max-width: 100%;
+        margin-bottom: 1em;
+    }
+
+    .skew-card-container {
+        width: 140%;
+        margin-left: -20%;
+    }
+
+    footer {
+        width: 140%;
+        margin-left: -20%;
+    }
+}
+
+@media screen and (max-width: 525px) {
+
 }
     
