--- a/css/layout.css
+++ b/css/layout.css
@@ -35,6 +35,11 @@ footer .skew {
     padding: 10px 0px 10px 0px;
 }
 
+.footer-links {
+    list-style-type: none;
+    padding: unset;
+}
+
 @media screen and (max-width: 900px) {
     #main {
         min-height: calc(100vh - 336px);
