Added Assignment 2.2 and Updated 1.4. I also created a basic modal to allow users to better view diagrams.

--- a/views/components/diagram.html
+++ b/views/components/diagram.html
@@ -1,5 +1,9 @@
 <!-- BEGIN DIAGRAM -->
-<div class="diagram">
+<div class="diagram gallery-item">
     <h3>|%title|</h3>
-    <img src="./images/|%image|" alt="|%title|">
+    <hr>
+    <h4>Object Relational Diagram</h4>
+    <img src="./images/|%ord|" alt="|%title| ORD" onclick="toggleModal(event);" />
+    <h4>NoSQL Data Structure</h4>
+    <img src="./images/|%nosql|" alt="|%title| NoSQL Data Structure" onclick="toggleModal(event);" />
 </div>
