--- a/views/portfolio.html
+++ b/views/portfolio.html
@@ -6,7 +6,7 @@
             "title": "Portfolio"
         }
     }'></component>
-    <div id="portfolio-gallery">
+    <div id="portfolio-gallery" class="gallery">
         <component data-props='{
             "url": "views/components/portfolio-thumb.html",
             "props": {
