--- a/views/components/portfolio-thumb.html
+++ b/views/components/portfolio-thumb.html
@@ -1,5 +1,5 @@
 <!-- BEGIN PORTFOLIO THUMB -->
-<div class="portfolio-thumb">
+<div class="portfolio-thumb gallery-item">
     <a href="|%link|" target="_blank">
         <h3>|%title|</h3>
         <img src="./images/portfolio/|%image|" alt="|%title|">
