--- a/views/web-335/smith-diagrams.html
+++ b/views/web-335/smith-diagrams.html
@@ -25,5 +25,14 @@
             }
         }'
         ></component>
+        <component data-props='{
+            "url": "views/components/diagram.html",
+            "props": {
+                "title": "Student/Class/Enroll Diagram",
+                "ord": "nosql-data-diagrams/ORD-week-2 2.jpg",
+                "nosql": "nosql-data-diagrams/NoSQL-week-2 2.jpg"
+            }
+        }'
+        ></component>
     </div>
 </div>
