Added WEB 420 Presentation 2.2

--- a/views/components/presentation.html
+++ b/views/components/presentation.html
@@ -1,5 +1,5 @@
 <!-- BEGIN PRESENTATION -->
-<div class="presentation">
+<div class="presentation gallery-item">
     <h3>|%title|</h3>
     <video controls autoplay reload="none">
         <source src="/videos/|%video|" />
