--- a/views/web-420/smith-rest.html
+++ b/views/web-420/smith-rest.html
@@ -6,12 +6,22 @@
             "title": "Presentations"
         }
     }'></component>
-    <component data-props='{
-        "url": "views/components/presentation.html",
-        "props": {
-            "title": "REST (Representational State Transfer)",
-            "video": "restful-api-presentations/smith-presentation-1.3.mp4"
-        }
-    }'
-    ></component>
+    <div class="gallery">
+        <component data-props='{
+            "url": "views/components/presentation.html",
+            "props": {
+                "title": "REST (Representational State Transfer)",
+                "video": "restful-api-presentations/smith-presentation-1.3.mp4"
+            }
+        }'
+        ></component>
+        <component data-props='{
+            "url": "views/components/presentation.html",
+            "props": {
+                "title": "RESTful APIs",
+                "video": "restful-api-presentations/smith-presentation-2.2.mp4"
+            }
+        }'
+        ></component>
+    </div>
 </div>
