--- a/views/web-335/smith-diagrams.html
+++ b/views/web-335/smith-diagrams.html
@@ -34,5 +34,14 @@
             }
         }'
         ></component>
+        <component data-props='{
+            "url": "views/components/diagram.html",
+            "props": {
+                "title": "User/Role/Permission Diagram",
+                "ord": "nosql-data-diagrams/ORD-week-3.jpg",
+                "nosql": "nosql-data-diagrams/NoSQL-week-3.jpg"
+            }
+        }'
+        ></component>
     </div>
 </div>
