Added Web 335 Assignment 3.3

--- a/views/components/three-doc-diagram.html
+++ b/views/components/three-doc-diagram.html
@@ -6,4 +6,6 @@
     <img src="./images/|%ord|" alt="|%title| ORD" onclick="toggleModal(event);" />
     <h4>NoSQL Data Structure</h4>
     <img src="./images/|%nosql|" alt="|%title| NoSQL Data Structure" onclick="toggleModal(event);" />
+    <h4>NoSQL Document Diagram</h4>
+    <img src="./images/|%nosqldoc|" alt="|%title| NoSQL Document Diagram" onclick="toggleModal(event);" />
 </div>
