--- a/views/web-335/smith-diagrams.html
+++ b/views/web-335/smith-diagrams.html
@@ -10,7 +10,7 @@
         <component data-props='{
             "url": "views/components/diagram.html",
             "props": {
-                "title": "User Diagram",
+                "title": "User",
                 "ord": "nosql-data-diagrams/ORD-week-1.jpg",
                 "nosql": "nosql-data-diagrams/NoSQL-week-1.jpg"
             }
@@ -19,7 +19,7 @@
         <component data-props='{
             "url": "views/components/diagram.html",
             "props": {
-                "title": "Customer/Invoice Diagram",
+                "title": "Customer/Invoice",
                 "ord": "nosql-data-diagrams/ORD-week-2.jpg",
                 "nosql": "nosql-data-diagrams/NoSQL-week-2.jpg"
             }
@@ -28,7 +28,7 @@
         <component data-props='{
             "url": "views/components/diagram.html",
             "props": {
-                "title": "Student/Class/Enroll Diagram",
+                "title": "Student/Class/Enroll",
                 "ord": "nosql-data-diagrams/ORD-week-2 2.jpg",
                 "nosql": "nosql-data-diagrams/NoSQL-week-2 2.jpg"
             }
@@ -37,9 +37,19 @@
         <component data-props='{
             "url": "views/components/diagram.html",
             "props": {
-                "title": "User/Role/Permission Diagram",
+                "title": "User/Role/Permission",
                 "ord": "nosql-data-diagrams/ORD-week-3.jpg",
                 "nosql": "nosql-data-diagrams/NoSQL-week-3.jpg"
+            }
+        }'
+        ></component>
+        <component data-props='{
+            "url": "views/components/three-doc-diagram.html",
+            "props": {
+                "title": "Book/Author/Publisher",
+                "ord": "nosql-data-diagrams/ORD-week-3 2.jpg",
+                "nosql": "nosql-data-diagrams/NoSQL-data-structure-week-3.jpg",
+                "nosqldoc": "nosql-data-diagrams/NoSQL-document-diagram-week-3.jpg"
             }
         }'
         ></component>
