Added Web 420 Presentation 3.3

--- a/views/components/presentation.html
+++ b/views/components/presentation.html
@@ -1,7 +1,7 @@
 <!-- BEGIN PRESENTATION -->
 <div class="presentation gallery-item">
     <h3>|%title|</h3>
-    <video controls autoplay reload="none">
+    <video controls reload="none">
         <source src="/videos/|%video|" />
     </video>
 </div>
