--- a/views/web-420/smith-rest.html
+++ b/views/web-420/smith-rest.html
@@ -23,5 +23,13 @@
             }
         }'
         ></component>
+        <component data-props='{
+            "url": "views/components/presentation.html",
+            "props": {
+                "title": "Introduction to SOAP",
+                "video": "restful-api-presentations/smith-presentation-3.3.mp4"
+            }
+        }'
+        ></component>
     </div>
 </div>
