--- a/views/web-420/smith-rest.html
+++ b/views/web-420/smith-rest.html
@@ -39,5 +39,13 @@
             }
         }'
         ></component>
+        <component data-props='{
+            "url": "views/components/presentation.html",
+            "props": {
+                "title": "Pull Your Card API",
+                "video": "restful-api-presentations/smith-presentation-6.2.mp4"
+            }
+        }'
+        ></component>
     </div>
 </div>
