--- a/views/web-420/smith-rest.html
+++ b/views/web-420/smith-rest.html
@@ -55,5 +55,13 @@
             }
         }'
         ></component>
+        <component data-props='{
+            "url": "views/components/presentation.html",
+            "props": {
+                "title": "Microservices",
+                "video": "restful-api-presentations/smith-presentation-8.3.mp4"
+            }
+        }'
+        ></component>
     </div>
 </div>
