--- a/views/web-420/smith-rest.html
+++ b/views/web-420/smith-rest.html
@@ -58,6 +58,14 @@
         <component data-props='{
             "url": "views/components/presentation.html",
             "props": {
+                "title": "Microservices",
+                "video": "restful-api-presentations/smith-presentation-8.3.mp4"
+            }
+        }'
+        ></component>
+        <component data-props='{
+            "url": "views/components/presentation.html",
+            "props": {
                 "title": "OAuth",
                 "video": "restful-api-presentations/smith-presentation-9.2.mp4"
             }
