--- a/views/portfolio.html
+++ b/views/portfolio.html
@@ -47,5 +47,13 @@
                 "image": "web-330-thumb.jpg"
             }
         }'></component>
+        <component data-props='{
+            "url": "views/components/portfolio-thumb.html",
+            "props": {
+                "title": "API Gateway",
+                "link": "https://smith-api-gateway.herokuapp.com/",
+                "image": "api-gateway-thumb.jpg"
+            }
+        }'></component>
     </div>
 </div>
