Added Web 425 Presentation 1.2

--- a/views/web-420/smith-rest.html
+++ b/views/web-420/smith-rest.html
@@ -71,5 +71,13 @@
             }
         }'
         ></component>
+        <component data-props='{
+            "url": "views/components/presentation.html",
+            "props": {
+                "title": "The Technology Value Stream",
+                "video": "devops-presentations/smith-presentation-1.2.mp4"
+            }
+        }'
+        ></component>
     </div>
 </div>
