--- a/views/web-420/smith-rest.html
+++ b/views/web-420/smith-rest.html
@@ -79,5 +79,13 @@
             }
         }'
         ></component>
+        <component data-props='{
+            "url": "views/components/presentation.html",
+            "props": {
+                "title": "The Two-Pizza Team Rule",
+                "video": "devops-presentations/smith-presentation-2.2.mp4"
+            }
+        }'
+        ></component>
     </div>
 </div>
