--- a/views/web-420/smith-rest.html
+++ b/views/web-420/smith-rest.html
@@ -87,5 +87,13 @@
             }
         }'
         ></component>
+        <component data-props='{
+            "url": "views/components/presentation.html",
+            "props": {
+                "title": "Testing",
+                "video": "devops-presentations/smith-presentation-3.2.mp4"
+            }
+        }'
+        ></component>
     </div>
 </div>
