--- a/views/web-420/smith-rest.html
+++ b/views/web-420/smith-rest.html
@@ -103,5 +103,13 @@
             }
         }'
         ></component>
+        <component data-props='{
+            "url": "views/components/presentation.html",
+            "props": {
+                "title": "Pager Rotation Duties",
+                "video": "devops-presentations/smith-presentation-5.2.mp4"
+            }
+        }'
+        ></component>
     </div>
 </div>
