--- a/views/web-420/smith-rest.html
+++ b/views/web-420/smith-rest.html
@@ -111,5 +111,13 @@
             }
         }'
         ></component>
+        <component data-props='{
+            "url": "views/components/presentation.html",
+            "props": {
+                "title": "The Dangers of Change Approval Processes",
+                "video": "devops-presentations/smith-presentation-6.2.mp4"
+            }
+        }'
+        ></component>
     </div>
 </div>
