--- a/views/web-420/smith-rest.html
+++ b/views/web-420/smith-rest.html
@@ -119,5 +119,13 @@
             }
         }'
         ></component>
+        <component data-props='{
+            "url": "views/components/presentation.html",
+            "props": {
+                "title": "Security Controls in Shared Source Code Repositories",
+                "video": "devops-presentations/smith-presentation-8.2.mp4"
+            }
+        }'
+        ></component>
     </div>
 </div>
