--- a/views/web-420/smith-rest.html
+++ b/views/web-420/smith-rest.html
@@ -127,5 +127,13 @@
             }
         }'
         ></component>
+        <component data-props='{
+            "url": "views/components/presentation.html",
+            "props": {
+                "title": "Change Management in DevOps",
+                "video": "devops-presentations/smith-presentation-9.2.mp4"
+            }
+        }'
+        ></component>
     </div>
 </div>
