--- a/views/portfolio.html
+++ b/views/portfolio.html
@@ -55,5 +55,13 @@
                 "image": "api-gateway-thumb.jpg"
             }
         }'></component>
+        <component data-props='{
+            "url": "views/components/portfolio-thumb.html",
+            "props": {
+                "title": "Bobs Computer Repair Shop",
+                "link": "https://mattbrubakersmith.github.io/bobs-computer-repair/bobs-computer-repair/",
+                "image": "bobs-computer-repair-thumb.jpg"
+            }
+        }'></component>
     </div>
 </div>
